--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,7 +17,12 @@
 
         <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
           <p class="text-center text-3xl">Welcome back.</p>
-          <form class="flex flex-col pt-3 md:pt-8" method="POST" action="/auth/login">
+          <%if (error) { %>
+            <div class="text-center pt-2">
+              <div class="text-red-500"> <%= error.message %> </div>
+            </div>
+          <% } %>
+          <form class="flex flex-col pt-3 md:pt-0" method="POST" action="/auth/login">
             <div class="flex flex-col pt-4">
               <label for="email" class="text-lg">Email</label>
               <input
