--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -20,12 +20,24 @@
           <p class="text-center text-3xl">Sign Up.</p>
           <form class="flex flex-col pt-3 md:pt-8" method="post" action="/auth/register">
             <div class="flex flex-col pt-4">
+              <label for="userName" class="text-lg">Username</label>
+              <input
+                      type="text"
+                      id="userName"
+                      name="userName"
+                      placeholder="Username"
+                      required
+                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
+              />
+            </div>
+            <div class="flex flex-col pt-4">
               <label for="firstName" class="text-lg">First Name</label>
               <input
                 type="text"
                 id="firstName"
                 name="firstName"
                 placeholder="First Name"
+                required
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
               />
             </div>
@@ -36,6 +48,7 @@
                 id="lastName"
                 name="lastName"
                 placeholder="Last Name"
+                required
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
               />
             </div>
@@ -46,6 +59,7 @@
                 id="email"
                 name="email"
                 placeholder="your@email.com"
+                required
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
               />
             </div>
@@ -57,6 +71,7 @@
                 id="password"
                 name="password"
                 placeholder="Password"
+                required
                 class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mt-1 leading-tight focus:outline-none focus:shadow-outline"
               />
             </div>
