--- a/src/views/post.ejs
+++ b/src/views/post.ejs
@@ -24,7 +24,7 @@
     <section
       class="h-screen w-screen bg-gray-200 flex flex-col-reverse sm:flex-row min-h-0 min-w-0 overflow-hidden"
     >
-      
+
       <main
         class="sm:h-full flex-1 flex flex-col min-h-0 min-w-0 overflow-auto"
       >
@@ -52,16 +52,16 @@
                       class="h-12 w-12 rounded-full"
                     />
                     <div class="flex flex-col ml-4">
-                      <a class="font-bold text-black" href="#"><%= post.userId %></a>
-                      <span class="text-grey"><%= post.userId %></span>
+                      <a class="font-bold text-black" href="#"><%= post.authorId %></a>
+                      <span class="text-grey"><%= post.authorId %></span>
                     </div>
-                 
+
                   </div>
                   <div class="mt-3 mb-1 leading-normal text-lg">
-                    <%= post.message %> 
+                    <%= post.content %>
                   </div>
                   <div class="text-grey mb-3 text-sm">
-                    <%= post.createdAt %> 
+                    <%= post.createdAt.toString() %>
                   </div>
                   <div class="flex text-grey">
                     <div class="flex items-center mr-4">
@@ -76,7 +76,7 @@
                           d="M14.046 2.242l-4.148-.01h-.002c-4.374 0-7.8 3.427-7.8 7.802 0 4.098 3.186 7.206 7.465 7.37v3.828c0 .108.045.286.12.403.143.225.385.347.633.347.138 0 .277-.038.402-.118.264-.168 6.473-4.14 8.088-5.506 1.902-1.61 3.04-3.97 3.043-6.312v-.017c-.006-4.368-3.43-7.788-7.8-7.79zm3.787 12.972c-1.134.96-4.862 3.405-6.772 4.643V16.67c0-.414-.334-.75-.75-.75h-.395c-3.66 0-6.318-2.476-6.318-5.886 0-3.534 2.768-6.302 6.3-6.302l4.147.01h.002c3.532 0 6.3 2.766 6.302 6.296-.003 1.91-.942 3.844-2.514 5.176z"
                         />
                       </svg>
-                      <span><%= post.comments %></span>
+                      <span><%= post.comments.length %></span>
                     </div>
                     <div class="flex items-center mr-4">
                       <svg
@@ -90,7 +90,7 @@
                           d="M23.77 15.67c-.292-.293-.767-.293-1.06 0l-2.22 2.22V7.65c0-2.068-1.683-3.75-3.75-3.75h-5.85c-.414 0-.75.336-.75.75s.336.75.75.75h5.85c1.24 0 2.25 1.01 2.25 2.25v10.24l-2.22-2.22c-.293-.293-.768-.293-1.06 0s-.294.768 0 1.06l3.5 3.5c.145.147.337.22.53.22s.383-.072.53-.22l3.5-3.5c.294-.292.294-.767 0-1.06zm-10.66 3.28H7.26c-1.24 0-2.25-1.01-2.25-2.25V6.46l2.22 2.22c.148.147.34.22.532.22s.384-.073.53-.22c.293-.293.293-.768 0-1.06l-3.5-3.5c-.293-.294-.768-.294-1.06 0l-3.5 3.5c-.294.292-.294.767 0 1.06s.767.293 1.06 0l2.22-2.22V16.7c0 2.068 1.683 3.75 3.75 3.75h5.85c.414 0 .75-.336.75-.75s-.337-.75-.75-.75z"
                         />
                       </svg>
-                      <span><%= post.reposts %></span>
+                      <span><%= post.reposts.length %></span>
                     </div>
                     <div class="flex items-center">
                       <svg
@@ -104,7 +104,7 @@
                           d="M12 21.638h-.014C9.403 21.59 1.95 14.856 1.95 8.478c0-3.064 2.525-5.754 5.403-5.754 2.29 0 3.83 1.58 4.646 2.73.813-1.148 2.353-2.73 4.644-2.73 2.88 0 5.404 2.69 5.404 5.755 0 6.375-7.454 13.11-10.037 13.156H12zM7.354 4.225c-2.08 0-3.903 1.988-3.903 4.255 0 5.74 7.035 11.596 8.55 11.658 1.52-.062 8.55-5.917 8.55-11.658 0-2.267-1.822-4.255-3.902-4.255-2.528 0-3.94 2.936-3.952 2.965-.23.562-1.156.562-1.387 0-.015-.03-1.426-2.965-3.955-2.965z"
                         />
                       </svg>
-                      <span><%= post.likes %></span>
+                      <span><%= post.postLikedFrom.length %></span>
                     </div>
                   </div>
                 </div>
@@ -112,7 +112,7 @@
               <div class=" w-full min-h-0 min-w-0 mb-4">
                 <!-- comment form -->
 <div class="flex mx-auto items-center justify-center shadow-lg mt-25 mx-8 mb-4 max-w-lg">
-  <form action="/posts/<%= post.postId %>/comment" method="post" class="w-full max-w-xl bg-white rounded-lg px-4 pt-2">
+  <form action="/posts/<%= post.id %>/comment" method="post" class="w-full max-w-xl bg-white rounded-lg px-4 pt-2">
      <div class="flex flex-wrap -mx-3 mb-6">
         <h2 class="px-4 pt-3 pb-2 text-gray-800 text-lg">Add a new comment</h2>
         <div class="w-full md:w-full px-3 mb-2 mt-2">
@@ -140,16 +140,16 @@
               <div
                 class="bg-gray-100 w-full h-full min-h-0 min-w-0 overflow-auto rounded-lg"
               >
-              <% post.commentList.forEach(comment => { %>               
+              <% post.comments.forEach(comment => { %>
                 <div class="w-full h-34 mt-3">
                   <div class="flex items-center dark:bg-gray-800">
                     <div class="text-black dark:text-gray-200 p-4 antialiased flex max-w-lg">
                       <img class="rounded-full h-8 w-8 mr-2 mt-1 " src="https://images.unsplash.com/photo-1521572267360-ee0c2909d518?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=934&q=80"/>
                       <div>
                         <div class="rounded-3xl bg-white px-4 pt-2 pb-2.5">
-                          <div class="font-semibold text-sm leading-relaxed"><%= comment.userId %> </div>
+                          <div class="font-semibold text-sm leading-relaxed"><%= comment.authorId %> </div>
                           <div class="text-normal leading-snug md:leading-normal"
-                          > <%= comment.message %></div>
+                          > <%= comment.content %></div>
                           <div class="text-normal leading-snug md:leading-normal"
                           > Reply</div>
                         </div>
@@ -165,6 +165,6 @@
 
       </main>
     </section>
-    
+
   </body>
 </html>
