--- a/src/views/search.ejs
+++ b/src/views/search.ejs
@@ -25,45 +25,38 @@
           </div>
           <div class="flex flex-wrap mt-12 justify-center">
             <div class="grid grid-cols-1 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 xl:grid-cols-6 gap-4">
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1">
-                <img
-                  alt="..."
-                  src="https://sewausa.org/resources/Sewa%20USA%20Images/Projects/Sewa%20Aspire/Volunteer%20list/9.png"
-                  class="h-24 w-24 rounded mx-auto"
-                />
-              </div>
-              <div class="col-span-2 sm:col-span-4 xl:col-span-4">
-                <p>John Doe</p>
-              </div>
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
-                <button
-                  class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
-                  type="button"
-                  style="transition: all 0.15s ease"
-                >
-                  <i class="fa fa-heart mr-2"></i> Following
-                </button>
-              </div>
 
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1">
-                <img
-                  alt="..."
-                  src="https://sewausa.org/resources/Sewa%20USA%20Images/Projects/Sewa%20Aspire/Volunteer%20list/9.png"
-                  class="h-24 w-24 rounded mx-auto"
-                />
-              </div>
-              <div class="col-span-2 sm:col-span-4 xl:col-span-4">
-                <p>John Smith</p>
-              </div>
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
-                <button
-                  class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
-                  type="button"
-                  style="transition: all 0.15s ease"
-                >
-                  <i class="fa fa-heart-o mr-2"></i>Follow
-                </button>
-              </div>
+              <% searchResults.users.forEach(user => { %>
+                <div class="col-span-2 sm:col-span-1 xl:col-span-1">
+                  <img
+                          alt="..."
+                          src="https://sewausa.org/resources/Sewa%20USA%20Images/Projects/Sewa%20Aspire/Volunteer%20list/9.png"
+                          class="h-24 w-24 rounded mx-auto"
+                  />
+                </div>
+                <div class="col-span-2 sm:col-span-4 xl:col-span-4">
+                  <% if(user.firstName && user.lastName){ %>
+                    <p><%=user.firstName%> <%=user.lastName%> </p>
+                  <% } else{ %>
+                    <p><%= user.email %> </p>
+                  <% } %>
+                </div>
+                <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
+                  <button
+                          class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
+                          type="button"
+                          style="transition: all 0.15s ease"
+                  >
+                    <% if(true){ %>
+                      <i class="fa fa-heart mr-2"></i> Following
+                    <% } else{ %>
+                      <i class="fa fa-heart-o mr-2"></i>Follow
+                    <% } %>
+
+                  </button>
+                </div>
+              <% }) %>
+
             </div>
           </div>
         </div>
@@ -79,33 +72,26 @@
           </div>
           <div class="flex flex-wrap mt-12 justify-center">
             <div class="grid grid-cols-1 sm:grid-cols-6 md:grid-cols-6 lg:grid-cols-6 xl:grid-cols-6 gap-4">
-              <div class="col-span-4 sm:col-span-5 xl:col-span-5">
-                <h3 class="font-semibold text-black">Bill Gates</h3>
-                <p>This is a first example of a post</p>
-              </div>
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
-                <button
-                  class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
-                  type="button"
-                  style="transition: all 0.15s ease"
-                >
-                  <i class="fa fa-arrow-right"></i>
-                </button>
-              </div>
 
-              <div class="col-span-4 sm:col-span-5 xl:col-span-5">
-                <h3 class="font-semibold text-black">Steve Jobs</h3>
-                <p>This is a second example of a post</p>
-              </div>
-              <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
-                <button
-                  class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
-                  type="button"
-                  style="transition: all 0.15s ease"
-                >
-                  <i class="fa fa-arrow-right"></i>
-                </button>
-              </div>
+              <% searchResults.posts.forEach(post => { %>
+
+                <div class="col-span-4 sm:col-span-5 xl:col-span-5">
+                  <h3 class="font-semibold text-black"><%= post.authorId %></h3>
+                  <p><%= post.content %></p>
+                </div>
+                <div class="col-span-2 sm:col-span-1 xl:col-span-1 italic">
+                  <a
+                          href="/posts/<%= post.id %>"
+                          class="text-pink-500 background-transparent font-bold uppercase px-6 py-2 text-sm outline-none focus:outline-none mr-1 mb-1"
+                          type="button"
+                          style="transition: all 0.15s ease"
+                  >
+                    <i class="fa fa-arrow-right"></i>
+                  </a>
+                </div>
+
+              <% }) %>
+
             </div>
           </div>
         </div>
