Implemented [Un]follow functionality

--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -241,7 +241,7 @@
       </div>
 
       <!-- Post begins -->
-      <% posts.forEach(post => { %>
+      <% posts.adminPosts.forEach(post => { %>
         <div class="flex bg-gray-100 mb-4 rounded-lg">
           <div class="w-1/8 text-right pl-3 pt-3">
             <div>
@@ -272,6 +272,68 @@
                   </form>
 
                 </span>
+              </div>
+
+            </div>
+            <div>
+              <div class="mb-4">
+                <p class="mb-6"><%= post.content %></p>
+              </div>
+              <div class="pb-2">
+                <span class="mr-8"
+                ><a
+                          href="/posts/<%= post.id %>"
+                          class="text-grey-dark hover:no-underline hover:text-blue-light"
+                  ><i class="fa fa-comment fa-lg mr-2"></i> <%=
+                      post.comments.length %></a
+                  ></span
+                >
+                <span class="mr-8"
+                ><a
+                          href="#"
+                          class="text-grey-dark hover:no-underline hover:text-green"
+                  ><i class="fa fa-retweet fa-lg mr-2"></i> <%=
+                      post.reposts.length %></a
+                  ></span
+                >
+                <span class="mr-8"
+                ><a
+                          href="#"
+                          class="text-grey-dark hover:no-underline hover:text-red"
+                  ><i class="fa fa-heart fa-lg mr-2"></i> <%= post.postLikedFrom.length
+                    %></a
+                  ></span
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      <% }) %>
+
+      <% posts.friendsPosts.forEach(post => { %>
+        <div class="flex bg-gray-100 mb-4 rounded-lg">
+          <div class="w-1/8 text-right pl-3 pt-3">
+            <div>
+              <a href="#"
+              ><img
+                        src="https://source.unsplash.com/collection/302501"
+                        alt="avatar"
+                        class="rounded-full h-12 w-12 mr-2"
+                /></a>
+            </div>
+          </div>
+
+          <div class="w-7/8 p-3 pl-0">
+            <!-- <div class="text-xs text-grey-dark">Reposted</div> -->
+            <div class="flex justify-between">
+              <div>
+                <span class="font-bold"
+                ><a href="#" class="text-black"
+                  ><%= post.authorId %></a
+                  ></span
+                >
+                <span class="text-grey-dark">&middot;</span>
+                <span class="text-grey-dark"><%= post.createdAt.toString() %></span>
               </div>
 
             </div>
