--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -20,6 +20,11 @@
           src="https://code.jquery.com/jquery-2.1.1.min.js"
   ></script>
 
+  <script
+          type="text/javascript"
+          src="js"
+  ></script>
+
 </head>
 <body class="bg-grey-light font-sans">
 <div
@@ -101,7 +106,7 @@
                   />
                 </svg>
               </span>
-          <form action="/search">
+          <form action="/search" id="search-form">
             <input
                     type="text"
                     name="query"
@@ -205,7 +210,7 @@
                     class="z-50 absolute mt-3 transform -translate-x-full bg-white rounded-md shadow-lg min-w-max"
             >
               <div class="flex flex-col p-4 space-y-1 font-medium border-b">
-                <span class="text-gray-800">John Doe</span>
+                <span class="text-gray-800">Name</span>
                 <span class="text-sm text-gray-400">john.doe@gmail.com</span>
               </div>
               <ul class="flex flex-col p-2 my-2 space-y-1">
@@ -229,11 +234,11 @@
                   class="w-12 h-12 rounded-full"
                   src="https://user-images.githubusercontent.com/76543451/103982284-0a6f0b00-5138-11eb-872b-0b9e70fc5c25.gif"
           />
-          <form class="w-full" action="/posts" method="POST">
+          <form class="w-full" action="/posts" method="POST" id="posts-form">
             <input
                     class="w-9/12 bg-gray-200 rounded-full px-3 py-2"
                     name="postText"
-                    placeholder="What's on your mind, Ross?"
+                    placeholder="What's on your mind?"
             />
             <input class="transition duration-500 ease-in-out hover:bg-red-600 transform w-2/12 rounded-full p-2 bg-gray-800 cursor-pointer text-gray-200" type="submit" value="Post">
           </form>
