--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -13,11 +13,16 @@
       <!-- Login Section -->
       <div class="w-full md:w-1/2 flex flex-col">
         <div class="flex justify-center md:justify-start pt-12 md:pl-12 md:-mb-24">
-          <a href="#" class="bg-black text-white font-bold text-xl p-4">devHouse</a>
+          <a href="/" class="bg-black text-white font-bold text-xl p-4">devHouse</a>
         </div>
 
         <div class="flex flex-col justify-center md:justify-start my-auto pt-8 md:pt-0 px-8 md:px-24 lg:px-32">
           <p class="text-center text-3xl">Sign Up.</p>
+          <%if (error) { %>
+            <div class="text-center pt-2">
+              <div class="text-red-500">🚨 <%= error %></div>
+            </div>
+          <% } %>
           <form class="flex flex-col pt-3 md:pt-8" method="post" action="/auth/register">
             <div class="flex flex-col pt-4">
               <label for="userName" class="text-lg">Username</label>
