Adding ability for users to reposts other's posts

--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -368,7 +368,7 @@
                 >
                 <span class="mr-8"
                 ><a
-                          href="#"
+                          href="/posts/<%= post.id %>/repost"
                           class="text-grey-dark hover:no-underline hover:text-green"
                   ><i class="fa fa-retweet fa-lg mr-2"></i> <%=
                       post.reposts.length %></a
