Final edits for notifications

--- a/src/views/posts.ejs
+++ b/src/views/posts.ejs
@@ -175,16 +175,8 @@
                 <div class="p-4 font-medium border-b">
                   <span class="text-gray-800">Notification</span>
                 </div>
-                <ul class="flex flex-col p-2 my-2 space-y-1">
-                  <li>
-                    <a href="#" class="block px-2 py-1 transition rounded-md hover:bg-gray-100">Link</a>
-                  </li>
-                  <li>
-                    <a href="#" class="block px-2 py-1 transition rounded-md hover:bg-gray-100">Another Link</a>
-                  </li>
-                </ul>
                 <div class="flex items-center justify-center p-4 text-blue-700 underline border-t">
-                  <a href="#">See All</a>
+                  <a href="/user/notifications">See Notifications</a>
                 </div>
               </div>
             </div>
