--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <meta name="description" content="" />
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body class="bg-white font-family-karla h-screen">
     <div class="w-full flex flex-wrap">
