--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -6,7 +6,7 @@
     <title>Register</title>
     <meta name="description" content="" />
 
-    <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet" />
   </head>
   <body class="bg-white font-family-karla h-screen">
     <div class="w-full flex flex-wrap">
@@ -101,7 +101,7 @@
         <img class="object-cover w-full h-screen hidden md:block" src="https://source.unsplash.com/IXUM4cJynP0" />
       </div>
     </div>
-<div class="min-h-screen bg-white flex">
+<!-- <div class="min-h-screen bg-white flex">
   <div class="flex-1 flex flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
     <div class="mx-auto w-full max-w-sm lg:w-96">
       <div>
@@ -109,7 +109,7 @@
         <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
           Sign Up
         </h2>
-      </div>
+      </div> -->
 
 <!--      <div class="mt-8">-->
 <!--        <div>-->
